--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -8,6 +8,34 @@
     <title>LandPage</title>
 </head>
 <body>
+    <section class="sessao bg-principal"> 
+        <div class="conteiner-principal">
+            <div class="conteudo-principal">
+                    <h1>Pequeno Príncipe</h1>
+                    <p> Lorem ipsum dolor sit amet consectetur adipisicing e Illo autem, ab eligendi fugit tempora corporis quisquam quo similique animi blanditiis non, nulla ut assumenda laboriosam hic harum dolorem est reiciendis!
+                    </p>
+            </div>
     
+            <div class="conteiner-imagens">
+                <img src="https://media.semprefamilia.com.br/semprefamilia/2018/04/bigstock-little-prince-and-the-fox-127327796-e533f25c.png" alt="Pequeno principe e a raposa">
+            </div>
+        </div>
+    </section>
+    
+    <section class="sessao bg-secundario">
+        <div class="conteiner-principal2">
+            <h2>História</h2>
+
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos facilis soluta, atque repellendus odit aperiam hic exercitationem nostrum blanditiis ea quam, delectus iusto consequatur pariatur suscipit sequi dolorem voluptatem cum!
+
+            </p>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora nesciunt illum doloribus ipsum pariatur quam quia porro. Laborum est at rem perferendis quasi reprehenderit, nesciunt porro eius minima inventore error?
+            </p>
+        </div>
+    </section>
+
+
+
 </body>
 </html>
