--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -12,7 +12,7 @@
         <div class="conteiner-principal">
             <div class="conteudo-principal">
                     <h1>Pequeno Príncipe</h1>
-                    <p> Lorem ipsum dolor sit amet consectetur adipisicing e Illo autem, ab eligendi fugit tempora corporis quisquam quo similique animi blanditiis non, nulla ut assumenda laboriosam hic harum dolorem est reiciendis!
+                    <p> Bem vindos ao mundo do Pequeno Príncipe! Aqui contaremos um pouco mais sobre a história dele o que ela nos ensina. O livro foi escrito por Antoine de Saint-Exupéry, um escritor francês, há 70 anos atrás, representando um dos maiores clássicos da literatura universal.
                     </p>
             </div>
     
@@ -26,11 +26,12 @@
         <div class="conteiner-principal2">
             <h2>História</h2>
 
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos facilis soluta, atque repellendus odit aperiam hic exercitationem nostrum blanditiis ea quam, delectus iusto consequatur pariatur suscipit sequi dolorem voluptatem cum!
+            <p>Um piloto cai com seu avião no deserto e ali encontra uma criança loura e frágil. Ela diz ter vindo de um pequeno planeta distante. E ali, na convivência com o piloto perdido, os dois repensam os valores da vida de forma que o pequeno príncipe, mostra o que realmente os adultos se importam, a diferença de cada valor, sendo cada valor um mundo onde pequeno principe visitou e descobriu a diferença entre a visão dele como criança e dos adultos.
+
 
             </p>
             <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora nesciunt illum doloribus ipsum pariatur quam quia porro. Laborum est at rem perferendis quasi reprehenderit, nesciunt porro eius minima inventore error?
+                O livro nos ensina como muitas vezes nós ficamos tão presos nas coisas grandes, de ter grandes conquistas e de termos dinheiro e riquezas que esquecemos como as pequenas coisas da vida são mais importantes do que muitas outras coisas que valorizamos. Podemos ver como a visão das crianças do mundo podem nos ensinar muito sobre as pequenas coisas, como por exempo a importância de uma flor do mundo ou de simplesmente observar as nuvens do céu. Numa das frases o pequeno príncipe diz: "As pessoas do seu planeta cultivam cinco mil rosas em um mesmo jardim e não encontram ali o que procuram(...)Os olhos são cegos. É preciso ver com o coração."
             </p>
         </div>
     </section>
