adicionei top3 e grid-fotos

--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/top3.css">
+    <link rel="stylesheet" href="css/grid_fotos.css">
     <title>LandPage</title>
 </head>
 <body>
@@ -33,6 +35,106 @@
             <p>
                 O livro nos ensina como muitas vezes nós ficamos tão presos nas coisas grandes, de ter grandes conquistas e de termos dinheiro e riquezas que esquecemos como as pequenas coisas da vida são mais importantes do que muitas outras coisas que valorizamos. Podemos ver como a visão das crianças do mundo podem nos ensinar muito sobre as pequenas coisas, como por exempo a importância de uma flor do mundo ou de simplesmente observar as nuvens do céu. Numa das frases o pequeno príncipe diz: "As pessoas do seu planeta cultivam cinco mil rosas em um mesmo jardim e não encontram ali o que procuram(...)Os olhos são cegos. É preciso ver com o coração."
             </p>
+        </div>
+    </section>
+
+    <section id="top3" class="sessao bg-principal">
+        <div class="top3-content">
+            <h2 class="top3-titulo">
+                TOP 3
+            </h2>
+            <p class="top3-subtitulo">
+                HQ's mais vendidas
+            </p>
+
+            <div class="grid">
+                <article>
+                    <h3>
+                        First
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, aperiam consequatur, velit id odit eveniet, itaque soluta natus beatae non eum? Fuga, ad! In quas amet voluptate veritatis. Iure, delectus!
+                    </p>
+                </article>
+                <article>
+                    <h3>
+                        Second
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, aperiam consequatur, velit id odit eveniet, itaque soluta natus beatae non eum? Fuga, ad! In quas amet voluptate veritatis. Iure, delectus!
+                    </p>
+                </article>
+                <article>
+                    <h3>
+                        Thrid
+                    </h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, aperiam consequatur, velit id odit eveniet, itaque soluta natus beatae non eum? Fuga, ad! In quas amet voluptate veritatis. Iure, delectus!
+                    </p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+    <section id="grid-fotos" class="sessao bg-secundario">
+        <div class="grid-fotos-content">
+            <h2 class="grid-fotos-titulo">
+                Galeria
+            </h2>
+            <p class="grid-fotos-subtitulo">
+                Principais HQ's
+            </p>
+
+            <div class="grade-de-fotos">
+                <div class="conteiner-img">
+                    <img src="" alt="">
+                    <div class="img-info">
+                        <p>
+                            bla bla bla
+                        </p>
+                    </div>
+                </div>
+                <div class="conteiner-img">
+                    <img src="" alt="">
+                    <div class="img-info">
+                        <p>
+                            bla bla bla
+                        </p>
+                    </div>
+                </div>
+                <div class="conteiner-img">
+                    <img src="" alt="">
+                    <div class="img-info">
+                        <p>
+                            bla bla bla
+                        </p>
+                    </div>
+                </div>
+                <div class="conteiner-img">
+                    <img src="" alt="">
+                    <div class="img-info">
+                        <p>
+                            bla bla bla
+                        </p>
+                    </div>
+                </div>
+                <div class="conteiner-img">
+                    <img src="" alt="">
+                    <div class="img-info">
+                        <p>
+                            bla bla bla
+                        </p>
+                    </div>
+                </div>
+                <div class="conteiner-img">
+                    <img src="" alt="">
+                    <div class="img-info">
+                        <p>
+                            bla bla bla
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
