01082023 volta as aulas

--- a/LandPage/index.html
+++ b/LandPage/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/top3.css">
     <link rel="stylesheet" href="css/grid_fotos.css">
     <link rel="stylesheet" href="css/formulario.css">
+    <link rel="stylesheet" href="css/footer.css">
     <title>LandPage</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
                 TOP 3
             </h2>
             <p class="top3-subtitulo">
-                HQ's mais vendidas
+                Avaliações de leitores
             </p>
 
             <div class="grid">
@@ -83,7 +84,7 @@
                 Galeria
             </h2>
             <p class="grid-fotos-subtitulo">
-                Principais HQ's
+                Frases famosas
             </p>
 
             <div class="grade-de-fotos">
@@ -148,7 +149,7 @@
 
             <div class="formulario-conteudo">
                 <fieldset>
-                    <label>Para contato</label>
+                    <label class="cabecalho">Para contato</label>
                     
                     <div class="formulario-elementos">
                         <label for="primeiro-nome">Nome</label>
@@ -182,10 +183,12 @@
 
         <footer id="rodape" class="footer">
             <p>
-                Feito por Yasmin, aluna da Ctrl+Play
+                Feito por <a target="_blank" href="https://github.com/Min2008">Yasmin</a> da Ctrl+Play
             </p>
 
         </footer>
+
+        <a class="back-to-top" href="#"><img src="img\seta-para-cima.png" alt="voltar para o inicio do site"></a>
 
 
 </body>
