dever da aula 12/09

--- a/Aula_16/index.html
+++ b/Aula_16/index.html
@@ -10,19 +10,19 @@
     <h1>Faltam...</h1>
     <section class="conteiner-contador">
         <div class="contador-dia">
-            <p>00</p>
+            <p class="text" id="dias">00</p>
             <span>Dias</span>
         </div>
         <div class="contador-horas">
-            <p>00</p>
+            <p class="text" id="horas">00</p>
             <span>Horas</span>
         </div>
         <div class="contador-minutos">
-            <p>00</p>
+            <p class="text" id="minutos">00</p>
             <span>Minutos</span>
         </div>
         <div class="contador-segundos">
-            <p>00</p>
+            <p class="text" id="segundos">00</p>
             <span>Segundos</span>
         </div>
     </section>
