--- a/Aula_17/panqueca.html
+++ b/Aula_17/panqueca.html
@@ -15,20 +15,20 @@
 
             <ul>
                 <li>
-                    <input type="radio" id="a" class="resposta">
-                    <label id="text_a">Alternativa</label>
+                    <input type="radio" id="a" name="resposta" class="resposta">
+                    <label for="a" id="text_a">Alternativa</label>
                 </li>
                 <li>
-                    <input type="radio" id="b" class="resposta">
-                    <label id="text_b">Alternativa</label>
+                    <input type="radio" id="b" name="resposta" class="resposta">
+                    <label for="b" id="text_b">Alternativa</label>
                 </li>
                 <li>
-                    <input type="radio" id="c" class="resposta">
-                    <label id="text_c">Alternativa</label>
+                    <input type="radio" id="c" name="resposta" class="resposta">
+                    <label for="c"id="text_c">Alternativa</label>
                 </li>
                 <li>
-                    <input type="radio" id="d" class="resposta">
-                    <label id="text_d">Alternativa</label>
+                    <input type="radio" id="d" name="resposta" class="resposta">
+                    <label for="d" id="text_d">Alternativa</label>
                 </li>
             </ul>
         </div>
