boletim escolar com prompt

--- a/Aula_18/milho.html
+++ b/Aula_18/milho.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boletim Escolar</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
         <h1>Boletim</h1>
-        <div>
-            <p id="nome">Nome</p>
-            <p id="media">Media</p>
-            <p id="resultado">Resultado</p>
+        <div class="conteiner_inform" id="conteiner_inform">
+            <p id="nome">Nome:</p>
+            <p id="media">Media Total: </p>
+            <p id="resultado">Resultado: </p>
         </div>
     </div>    
     
