--- a/Aula_18/milho.html
+++ b/Aula_18/milho.html
@@ -7,15 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <h1>Boletim</h1>
-        <div class="conteiner_inform" id="conteiner_inform">
-            <p id="nome">Nome:</p>
-            <p id="media">Media Total: </p>
-            <p id="resultado">Resultado: </p>
-        </div>
-    </div>    
-    
+    <main>
+            <h1>Boletim</h1>
+            <div class="conteiner_inform" id="conteiner_inform">
+                <label>Nome: </label>
+                <span id="nome">Fulano</span>
+            </div>
+
+            <div>
+                <label>Media Total: </label>
+                <span  id="media">10</span>
+            </div>
+
+            <div>
+                <label>Resultado: </label>
+                <span id="resultado">Aprovado</span>
+            </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
