--- a/Aula_18/formulario_milho.html
+++ b/Aula_18/formulario_milho.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style_form.css">
     <title>Document</title>
 </head>
 <body>
     <main>
         <form action="">
             <h1>Fomulário do Aluno</h1>
-            <label for="">Nome: </label>
-            <input type="text" name="nome" id="nome">
-            <label for="">Nota1: </label>
-            <input type="text" name="nota1" id="n1">
-            <label for="">Nota2: </label>
-            <input type="text" name="nota2" id="n2">
-            <label for="">Nota3: </label>
-            <input type="text" name="nota3" id="n3">
+            <div>
+                <label for="">Nome: </label>
+                <input type="text" name="nome" id="nome">
+            </div>
+            <div>
+                <label for="">Nota1: </label>
+                <input type="text" name="nota1" id="n1">
+            </div>
+            <div>
+                <label for="">Nota2: </label>
+                <input type="text" name="nota2" id="n2">
+            </div>
+            <div>
+                <label for="">Nota3: </label>
+                <input type="text" name="nota3" id="n3">
+            </div>
         </form>
     </main>
     <script src="script_form.js"></script>
