--- a/Aula_18/formulario_milho.html
+++ b/Aula_18/formulario_milho.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <form action="">
+        <form action="/Aula_18/milho.html" method="POST" id="form">
             <h1>Fomulário do Aluno</h1>
             <div>
                 <label for="">Nome: </label>
@@ -26,6 +26,8 @@
                 <label for="">Nota3: </label>
                 <input type="text" name="nota3" id="n3">
             </div>
+
+            <button type="submit" id="enviar">Enviar</button>
         </form>
     </main>
     <script src="script_form.js"></script>
