--- a/Aula_18/milho.html
+++ b/Aula_18/milho.html
@@ -8,21 +8,22 @@
 </head>
 <body>
     <main>
-            <h1>Boletim</h1>
-            <div class="conteiner_inform" id="conteiner_inform">
-                <label>Nome: </label>
-                <span id="nome">Fulano</span>
-            </div>
+        <h1>Boletim</h1>
+        <div class="conteiner_inform" id="conteiner_inform">
+            <label>Nome: </label>
+            <span id="nome">Fulano</span>
+        </div>
 
-            <div>
-                <label>Media Total: </label>
-                <span  id="media">10</span>
-            </div>
+        <div>
+            <label>Media Total: </label>
+            <span  id="media">10</span>
+        </div>
 
-            <div>
-                <label>Resultado: </label>
-                <span id="resultado">Aprovado</span>
-            </div>
+        <div>
+            <label>Resultado: </label>
+            <span id="resultado">Aprovado</span>
+        </div>
+        <a href="formulario_milho.html">Voltar</a>
     </main>
     <script src="script.js"></script>
 </body>
