--- a/Aula_18/formulario_milho.html
+++ b/Aula_18/formulario_milho.html
@@ -8,26 +8,27 @@
 </head>
 <body>
     <main>
-        <form action="/Aula_18/milho.html" method="POST" id="form">
+        <form action="milho.html" method="POST" id="form">
             <h1>Fomulário do Aluno</h1>
             <div>
-                <label for="">Nome: </label>
-                <input type="text" name="nome" id="nome">
+                <label for="nome_input">Nome </label>
+                <input type="text" name="nome" id="nome_input" placeholder="primeiro nome">
             </div>
             <div>
-                <label for="">Nota1: </label>
-                <input type="text" name="nota1" id="n1">
+                <label for="n1_input">Nota1 </label>
+                <input type="text" name="nota1" id="n1_input" placeholder="Digite a nota de 1 a 10">
             </div>
             <div>
-                <label for="">Nota2: </label>
-                <input type="text" name="nota2" id="n2">
+                <label for="n2_input">Nota2 </label>
+                <input type="text" name="nota2" id="n2_input" placeholder="Digite a nota de 1 a 10">
             </div>
             <div>
-                <label for="">Nota3: </label>
-                <input type="text" name="nota3" id="n3">
+                <label for="n3_input">Nota3 </label>
+                <input type="text" name="nota3" id="n3_input" placeholder="Digite a nota de 1 a 10">
             </div>
-
-            <button type="submit" id="enviar">Enviar</button>
+            <div class="btncontent">
+                <button type="submit" id="enviar">Enviar</button>
+            </div>
         </form>
     </main>
     <script src="script_form.js"></script>
