dever dia 10 out

--- a/Aula_19/lasanha.html
+++ b/Aula_19/lasanha.html
@@ -9,9 +9,7 @@
 <body>
     <script src="script.js"></script>
     <div>
-        <h1>
-            titulo
-        </h1>
+        <h1> Calculadora </h1>
     
         <div id="operacoes">
             <div>operacoes anteriores</div>
