--- a/Aula_18/formulario_milho.html
+++ b/Aula_18/formulario_milho.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <form action="milho.html" method="POST" id="form">
-            <h1>Fomulário do Aluno</h1>
+            <h1>Formulário do Aluno</h1>
             <div>
                 <label for="nome_input">Nome </label>
                 <input type="text" name="nome" id="nome_input" placeholder="primeiro nome">
