--- a/Aula_18/formulario_index.html
+++ b/Aula_18/formulario_index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <form action="milho.html" method="POST" id="form">
+        <form action="index.html" method="POST" id="form">
             <h1>Formulário do Aluno</h1>
             <div>
                 <label for="nome_input">Nome </label>
