aula 25 quase completa!

--- a/Aula_25/index.html
+++ b/Aula_25/index.html
@@ -10,12 +10,45 @@
 </head>
 <body>
     <main>
-        <h1 class="title">
-            Info Country
-        </h1>
-        <input type="search" class="search" placeholder="Type a Country">
+        <form class="conteudo-pesquisa">
+            <h1 class="title">
+                Info Country
+            </h1>
+            <input type="search" class="search" placeholder="Type a Country">
+        </form>
         <div class="info-conteiner">
-
+            <div>
+                <label for="">Nome Oficial</label>
+                <span class="nome-oficial">Brazil</span>
+            </div>
+            <div>
+                <label for="">Bandeira</label>
+                <img src="#" alt="bandeira" class="bandeira"></img>
+            </div>
+            <div>
+                <label for="">Extensão Territorial</label>
+                <span class="territorio">200.200.200</span>
+            </div>
+            <div>
+                <label for="">Capital</label>
+                <span class="capital">Brazilia</span>
+            </div>
+            <div>
+                <label for="">Continente</label>
+                <span class="continente">America</span>
+            </div>
+            <div>
+                <label for="">Sub-Região</label>
+                <span class="sub-regiao">America do Sul</span>
+            </div>
+            <div>
+                <label for="">Sigla</label>
+                <span class="sigla">BR</span>
+            </div>
+            <div>
+                <label for="">População</label>
+                <span class="populacao">Portugues</span>
+            </div>
         </div>
     </main>
     
