css quase concluido

--- a/Aula_26/index.html
+++ b/Aula_26/index.html
@@ -8,37 +8,32 @@
     <title>API CEP</title>
 </head>
 <body>
-    <main class="conteiner-api">
-        <div class="titulo">
+    <form class="cep-conteiner">
+        <div>
             <h1>Endereço</h1>
         </div>
-        <div class="conteiner-informacoes">
-            <div>
+        <div class="conteiner-info">
+            <div class="info">
                 <label>CEP</label>
-                <input class="cep" type="text">
+                <input placeholder="Digite seu cep" class="cep" type="text">
             </div>
-            <div>
+            <div class="info">
                 <label>Logradouro</label>
-                <input class="logradouro" type="text">
+                <input placeholder="Digite sua rua" class="logradouro" type="text">
             </div>
-            <div>
-                <label>Bairro</label>
-                <input class="bairro" type="text">
-            </div>
-            <div>
-                <label>Cidade</label>
-                <input class="cidade" type="text">
-            </div>
-            <div>
+            <div class="info">
                 <label>Estado</label>
-                <input class="estado" type="text">
+                <input placeholder="Digite seu estado" class="estado" type="text">
             </div>
-            <div>
-                <label>Numero</label>
-                <input class="numero" type="text" placeholder="numero da casa">
+            <div class="info">
+                <label>Cidade</label>
+                <input placeholder="Digite sua cidade" class="cidade" type="text">
+            </div>
+            <div class="info">
+                <label>Bairro</label>
+                <input placeholder="Digite seu bairro" class="bairro" type="text">
             </div>
         </div>
-    </main>
-    
+    </form>
 </body>
 </html>
