terminado css e quase acabou o java

--- a/Aula_26/index.html
+++ b/Aula_26/index.html
@@ -15,7 +15,7 @@
         <div class="conteiner-info">
             <div class="info">
                 <label>CEP</label>
-                <input placeholder="Digite seu cep" class="cep" type="text">
+                <input placeholder="Digite seu cep" class="cep" type="text" required>
             </div>
             <div class="info">
                 <label>Logradouro</label>
