--- a/Aula_19/index.html
+++ b/Aula_19/index.html
@@ -8,16 +8,32 @@
 </head>
 <body>
     <script src="script.js"></script>
-    <div>
+    <div id="calc">
         <h1> Calculadora </h1>
-    
         <div id="operacoes">
-            <div>operacoes anteriores</div>
-            <div>operacoes dada pela pessoa</div>
+            <div id="operacoes-anteriores">123 +</div>
+            <div id="operacoes-pessoa">234</div>
         </div>
         <div id="conteiner_button">
-            18 botoes! - na ordem da calculadora de linha
-            fazer uma classe number para os numeros e o ponto
+            <button>CE</button>
+            <button>C</button>
+            <button>DEL</button>
+            <button>/</button>
+            <button class="number">7</button>
+            <button class="number">8</button>
+            <button class="number">9</button>
+            <button>*</button>
+            <button class="number">4</button>
+            <button class="number">5</button>
+            <button class="number">6</button>
+            <button>-</button>
+            <button class="number">1</button>
+            <button class="number">2</button>
+            <button class="number">3</button>
+            <button>+</button>
+            <button class="number">0</button>
+            <button class="number">.</button>
+            <button id="equal-btn">=</button>
         </div>
     </div>
 
