land page design

--- a/LandPage2/index.html
+++ b/LandPage2/index.html
@@ -1,14 +1,120 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Educação de Qualidade</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <section id="beneficios-conteudo">
+    <section class="intro-conteudo" id="sessao">
+        <div class="conteudo">
+            <div class="conteudo-esquerda">
+                <h1>
+                    Matérias Diferentes
+                </h1>
+                <p>
+                    O sistema educacional brasileiro, frequentemente focado na memorização, carece de uma abordagem mais prática e aplicada. A inclusão de disciplinas como nutrição, primeiros socorros e educação financeira pode trazer benefícios substanciais à formação dos alunos. Além de fornecer conhecimentos essenciais para a vida cotidiana, essas matérias promovem habilidades práticas, preparando os estudantes para desafios reais e contribuindo para uma educação mais abrangente e relevante. Ao integrar temas que transcendem a mera memorização, podemos nutrir indivíduos mais capacitados e preparados para enfrentar os desafios do mundo contemporâneo.
+                </p>
+            </div>
+            <div class="conteudo-direita">
+                <h1>
+                    Matriz curricular 
+                </h1>
+                <div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <th>
+                                    Matérias
+                                </th>
+                                <th>
+                                    % presença
+                                </th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Língua portuguesa </td>
+                                <td>90</td>
+                            </tr>
+                            <tr>
+                                <td>Matemática </td>
+                                <td>90</td>
+                            </tr>
+                            <tr>
+                                <td>Inglês </td>
+                                <td>90</td>
+                            </tr>
+                            <tr>
+                                <td>Educação Física </td>
+                                <td>90</td>
+                            </tr>
+                            <tr>
+                                <td>Geografia </td>
+                                <td>90</td>
+                            </tr>
+                            <tr>
+                                <td>História </td>
+                                <td>90</td>
+                            </tr>
+                            <tr>
+                                <td>Física </td>
+                                <td>90</td>
+                            </tr>
+                            <tr>
+                                <td>Projeto de vida </td>
+                                <td>90</td>
+                            </tr>
+                            <tr>
+                                <td>Vestibular </td>
+                                <td>90</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="materias-conteudo" id="sessao">
+        <div class="conteudo">
+            <div class="title-materia">
+                <h2 class="titulo-materias">
+                    MATÉRIAS QUE DEVERIAM SER ENSINADAS NA ESCOLA
+                </h2>
+                <img src="img/book.png" class="img">
+            </div>
+            <div class="grid">
+                <article>
+                    <h3 class="materias titulos">
+                        NUTRIÇÃO
+                    </h3>
+                    <p class="materias">
+
+                        No curso de Nutrição, o aluno estuda as necessidades físicas, biológicas e patológicas do corpo humano. Entende a relação das pessoas com os alimentos e as propriedades de cada um deles. Assim, ele percebe que só um alimento não cura ou auxilia o corpo humano.
+                    </p>
+                </article>
+                <article>
+                    <h3 class="materias titulos">
+                        PRIMEIROS SOCORROS
+                    </h3>
+                    <p class="materias">
+                        Primeiros Socorros são os cuidados iniciais que devem ser prestados rapidamente a uma pessoa, vítima de acidentes ou de mal súbito, cujo estado físico põe em perigo a sua vida, com o fim de manter as funções vitais e evitar o agravamento de suas condições, aplicando medidas e procedimentos até a chegada de assistência médica
+                    </p>
+                </article>
+                <article>
+                    <h3 class="materias titulos">
+                        EDUCAÇÃO FINANCEIRA
+                    </h3>
+                    <p class="materias">
+                        Educação financeira é o processo em que um indivíduo busca ou obtém conhecimento para lidar com o dinheiro de forma mais consciente e inteligente. A ideia é que o aprendizado seja convertido em práticas que levem a um uso mais comedido dos recursos financeiros, fazendo também com que ele leve à prosperidade.
+                    </p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="beneficios-conteudo " id="sessao">
         <div class="section3">
             <h2>Benefícios</h2>
             <p> 
@@ -38,8 +144,10 @@
                 e ter uma reserva caso houver uma emergência, aumentando assim 
                 futuramente a qualidade de vida sua e de sua familia. 
             </p>
-            
         </div>
     </section>
+    <footer> 
+        desenvolvido por <a href="https://github.com/DiegoOlvr" target="_blank">Diego</a> , <a href="https://github.com/LFabreu" target="_blank">Lucas <a> e <a href="https://github.com/Min2008" target="_blank">Yasmin </a>
+    </footer>
 </body>
 </html>
