algumas alteraçoes no css

--- a/LandPage2/index.html
+++ b/LandPage2/index.html
@@ -24,7 +24,7 @@
                 </h1>
                 <div>
                     <table>
-                        <thead>
+                        <head>
                             <tr>
                                 <th>
                                     Matérias
@@ -33,8 +33,8 @@
                                     % presença
                                 </th>
                             </tr>
-                        </thead>
-                        <tbody>
+                        </head>
+                        <body>
                             <tr>
                                 <td>Língua portuguesa </td>
                                 <td>90</td>
@@ -71,7 +71,7 @@
                                 <td>Vestibular </td>
                                 <td>90</td>
                             </tr>
-                        </tbody>
+                        </body>
                     </table>
                 </div>
             </div>
@@ -147,7 +147,7 @@
         </div>
     </section>
     <footer> 
-        desenvolvido por <a href="https://github.com/DiegoOlvr" target="_blank">Diego</a> , <a href="https://github.com/LFabreu" target="_blank">Lucas <a> e <a href="https://github.com/Min2008" target="_blank">Yasmin </a>
+        desenvolvido por <a href="https://github.com/DiegoOlvr" target="_blank"> Diego </a> , <a href="https://github.com/LFabreu" target="_blank"> Lucas <a> e <a href="https://github.com/Min2008" target="_blank"> Yasmin </a>
     </footer>
 </body>
 </html>
